--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -12,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "clipboardy": "^4.0.0",
     "nodemon": "^3.0.1",
+    "open": "^10.0.2",
+    "openurl": "^1.1.1",
     "play-sound": "^1.1.5",
     "sound-play": "^1.1.0"
   }
